// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hydrating state should merge inital state and state on load 1`] = `
Object {
  "databases": Array [],
  "foo": "bar",
  "functions": Array [],
  "labels": Array [],
  "nodes": 0,
  "procedures": Array [],
  "properties": Array [],
  "relationshipTypes": Array [],
  "relationships": 0,
  "role": null,
  "server": Object {
    "edition": null,
    "storeSize": null,
    "version": null,
  },
  "settings": Object {
    "browser.allow_outgoing_connections": false,
    "browser.remote_content_hostname_whitelist": "guides.neo4j.com, localhost",
    "browser.retain_connection_credentials": true,
  },
}
`;

exports[`updating metadata can CLEAR to reset state 1`] = `
Object {
  "databases": Array [],
  "functions": Array [],
  "labels": Array [],
  "nodes": 0,
  "procedures": Array [],
  "properties": Array [],
  "relationshipTypes": Array [],
  "relationships": 0,
  "role": null,
  "server": Object {
    "edition": null,
    "storeSize": null,
    "version": null,
  },
  "settings": Object {
    "browser.allow_outgoing_connections": false,
    "browser.remote_content_hostname_whitelist": "guides.neo4j.com, localhost",
    "browser.retain_connection_credentials": true,
  },
}
`;

exports[`updating metadata can update meta values with UPDATE 1`] = `
Object {
  "myKey": "yo",
  "noKey": true,
  "secondKey": true,
}
`;

exports[`updating metadata can update server info 1`] = `
Object {
  "server": Object {
    "edition": "enterprise",
    "storeId": "xxxx",
    "version": "3.2.0-RC2",
  },
  "shouldKeep": true,
}
`;

exports[`updating metadata can update server settings 1`] = `
Object {
  "settings": Object {
    "browser.test": 1,
  },
  "shouldKeep": true,
}
`;
